Fix text overflow, add input limit

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,15 +1,3 @@
-body {
-    margin: 4px;
-    font-size: 15px;
-}
-
-* {
-    box-sizing: border-box;
-}
-
-.text-right {
-    text-align: right;
-}
-.text-left {
-    text-align: left;
-}
+@import 'variables';
+@import 'utils';
+@import 'misc';
